# Triangle-Image-Generator

./: .editorconfig  .gitattributes  .gitignore  MANIFEST.in  README.md  app.py  pyproject.toml  requirements-acceleration.txt  tri_gen.py
.github/workflows/: ci.yml
Color/Logic/: color-tri-gen.py
Grayscale/Logic/: tri-gen.py
core/: __init__.py  acceleration.py  config.py  evolver.py  fitness.py  genetic.py  guidance.py  io.py  paths.py  pipeline.py  renderer.py  shapes.py
tests/: test_cli.py  test_core.py
